icalendar: Autospec creation for update from version 3.11.6 to version 3.11.7
3.11.7 (2017-08-27)
-------------------

New features:

- added vUTCOffset.ignore_exceptions to allow surpressing of failed TZOFFSET
  parsing (for now this ignores the check for offsets > 24h) [geier]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Changelog
 =========
 
+3.11.7 (2017-08-27)
+-------------------
+
+New features:
+
+- added vUTCOffset.ignore_exceptions to allow surpressing of failed TZOFFSET
+  parsing (for now this ignores the check for offsets > 24h) [geier]
+
+
 3.11.6 (2017-08-04)
 -------------------
 
