--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,34 @@
 Changelog
 =========
 
+4.0.0 (2017-11-08)
+------------------
+
+Breaking changes:
+
+- Drop support for Python 2.6 and 3.3.
+
+
+3.12 (2017-11-07)
+-----------------
+
+New features:
+
+- Accept Windows timezone identifiers as valid. #242 [geier]
+
+Bug fixes:
+
+- Fix ResourceWarnings in setup.py when Python warnings are enabled. #244 [jdufresne]
+
+- Fix invalid escape sequences in string and bytes literals. #245 [jdufresne]
+
+- Include license file in the generated wheel package. #243 [jdufresne]
+
+- Fix non-ASCII TZID and TZNAME parameter handling. #238 [clivest]
+
+- Docs: update install instructions. #240 [Ekran]
+
+
 3.11.7 (2017-08-27)
 -------------------
 
