icalendar: Autospec creation for update from version 4.0.0 to version 4.0.1
4.0.1 (2018-02-11)
------------------

- Added rudimentary command line interface.
  [jfjlaros]

- Readme, setup and travis updates.
  [jdufresne, PabloCastellano]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+4.0.1 (2018-02-11)
+------------------
+
+- Added rudimentary command line interface.
+  [jfjlaros]
+
+- Readme, setup and travis updates.
+  [jdufresne, PabloCastellano]
+
+
 4.0.0 (2017-11-08)
 ------------------
 
