icalendar: Autospec creation for update from version 4.0.1 to version 4.0.2
Johannes Raggam (1):
      Merge pull request #261 from jdufresne/pypi

Jon Dufresne (1):
      Update all pypi.python.org URLs to pypi.org

esteele (3):
      Back to development: 4.0.2
      Cleaned up empty headers from changelog.
      Preparing release 4.0.2

4.0.2 (2018-06-20)
------------------

Bug fixes:

- Update all pypi.python.org URLs to pypi.org
  [jon.dufresne]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Changelog
 =========
 
+4.0.2 (2018-06-20)
+------------------
+
+Bug fixes:
+
+- Update all pypi.python.org URLs to pypi.org
+  [jon.dufresne]
+
+
 4.0.1 (2018-02-11)
 ------------------
 
