--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Changelog
 =========
 
+4.0.3 (2018-10-10)
+------------------
+
+Bug fixes:
+
+- Categories are comma separated not 1 per line #265. [cleder]
+- mark test with mixed timezoneaware and naive datetimes as an expected failure. [cleder]
+
+
 4.0.2 (2018-06-20)
 ------------------
 
